Attempt again to align Facebook like correctly

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -62,7 +62,8 @@ nav.share {
 
 nav.share div {
   display: inline-block;
-  overflow:hidden;
+  overflow: hidden;
+  margin-top: 3px;
 }
 
 nav.share iframe {
@@ -90,9 +91,10 @@ nav.share iframe {
 
 .fb-like {
   display: inline-block;
-  vertical-align: top;
+  margin: 0px;
 }
 
+/*
 * html .fb-like{
   display: inline;
 }
@@ -100,3 +102,4 @@ nav.share iframe {
 *+html .fb-like{
   display: inline;
 }
+*/
